# msspeech

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  check1.py  check2.py  parsevoices.py  pyproject.toml  requirements-dev.txt  requirements.txt  s.txt  setup.py  voices_list_plus.json  voicesplus.txt
.github/workflows/: ci.yml
msspeech/: __init__.py  __main__.py  voices_list.json  voices_list_plus.json
tests/: api_test.py  build_request_test.py  cli_test.py  conftest.py  extract_response_test.py  ireplace_test.py  parse_multi_voices_test.py  pitch_test.py  rate_test.py  test_voices_list.py  volume_test.py
